--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.10.2",
     "react-live-clock": "^3.1.0",
     "react-redux": "^7.1.1",
+    "react-responsive-tabs": "^3.3.0",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
