add homepage url

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kdev-todo-list",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kdevsoftware.github.io/kdev-todo-list",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "firebase": "^7.1.0",
