--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
     "react": "^16.10.2",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.10.2",
     "react-live-clock": "^3.1.0",
     "react-redux": "^7.1.1",
